fix bottom alignment

--- a/css/style.css
+++ b/css/style.css
@@ -927,3 +927,10 @@ Parallax
 
 
 }
+
+.widget-contact {
+    text-align: center;
+}
+.mt-10 {
+    margin-top: 10px;
+}
